# simple-splade

./: README.md  main.py  pyproject.toml
simple_splade/: evaluate.py  model.py  train.py  vectorization.py
tests/: test_model.py
